--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "qrcode": "^1.5.4",
     "rxjs": "~7.5.0",
     "sockjs-client": "^1.6.1",
+    "swiper": "^11.2.1",
     "tabulator-tables": "^5.5.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
